--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,5 +12,20 @@
 	</head>
 	<body>
 		<h1>Astro</h1>
+	
+		<main>
+			<article>
+				<h2>Hej verden				</h2>
+				<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum cupiditate soluta tempore at beatae facilis adipisci, tempora voluptatem suscipit, sequi ipsum fuga. Et culpa corporis temporibus, commodi quisquam eaque tempore.</p>
+				<button>Klik her</button>
+			</article>
+
+			<article>
+	<h2>Hej verden</h2>
+	<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum cupiditate soluta tempore at beatae facilis adipisci, tempora voluptatem suscipit, sequi ipsum fuga. Et culpa corporis temporibus, commodi quisquam eaque tempore.</p>
+	<button>Klik her</button>
+</article>
+
+		</main>
 	</body>
 </html>
