--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,8 @@
 ---
-
+import "../styles/styles.css";
+import Card from "../components/Card.astro";
+import Navigation from "../components/Navigation.astro";
+import Button from "../components/Button.astro";
 ---
 
 <html lang="en">
@@ -11,20 +14,25 @@
 		<title>Astro</title>
 	</head>
 	<body>
-		<h1>Astro</h1>
-	
-		<main>
-			<article>
-				<h2>Hej verden				</h2>
-				<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum cupiditate soluta tempore at beatae facilis adipisci, tempora voluptatem suscipit, sequi ipsum fuga. Et culpa corporis temporibus, commodi quisquam eaque tempore.</p>
-				<button>Klik her</button>
-			</article>
 
-			<article>
-	<h2>Hej verden</h2>
-	<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum cupiditate soluta tempore at beatae facilis adipisci, tempora voluptatem suscipit, sequi ipsum fuga. Et culpa corporis temporibus, commodi quisquam eaque tempore.</p>
-	<button>Klik her</button>
-</article>
+		<Navigation />
+
+		<h1>Astro</h1>
+		
+		<main>
+			<Button variant="primary" size="small">TEXT</Button>
+			<Button variant="secondary" size="medium">TEXT</Button>
+			<Button variant="secondary" size="large">TEXT</Button>
+
+			<!-- <Card header="Hej Verden">
+				<img src="/meme1.webp" alt="et meme">
+				<button>Klik her</button>
+			</Card>
+
+			<Card header="Hej Verden">
+				<button>Klik her</button>
+				<img src="/meme2.webp" alt="et meme">
+			</Card> -->
 
 		</main>
 	</body>
