--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -3,5 +3,6 @@
 ---
 
 <nav>
-<a href="/#">Hjem</a><a href="/#">Om os</a><a href=/#">IDK</a>
+    <a href="/">Hjem</a>
+    <a href="/aboutus">About us</a>
 </nav>
